add database tables and seed data round 2

--- a/package.json
+++ b/package.json
@@ -28,5 +28,6 @@
   "bugs": {
     "url": "https://github.com/kotare-2020/WorkWithMe/issues"
   },
-  "homepage": "https://github.com/kotare-2020/WorkWithMe#readme"
+  "homepage": "https://github.com/kotare-2020/WorkWithMe#readme",
+  "keywords": []
 }
